# MGraph-AI__Service__Cache

./: .gitmodules  README.md  pyproject.toml  requirements-test.txt
.github/workflows/: ci-pipeline.yml  ci-pipeline__dev.yml
docs/: README.md
docs/architecture/: cache-service-api-routes.md
docs/dev/llm-briefs/: v0.11.0__llm-brief__cache-service-storage-operations.md
docs/dev/setup/: repo-setup-guide.md
docs/llm-briefs/: mgraph-ai__cache-service__llm-brief.md  v0.5.17__cache-service__llm-brief.md  v0.5.30__cache-service__llm-brief.md  v0.5.68__cache-service__python-client__llm_brief.md
docs/llm-briefs/for refactoring/: v0.5.40__llm_briefing__cache-service-multi-backend-storage-implementation.md
mgraph_ai_service_cache/: __init__.py  config.py  version
mgraph_ai_service_cache/fast_api/: Cache_Service__Fast_API.py  Service__Fast_API.py  lambda_handler.py
mgraph_ai_service_cache/fast_api/routes/: Routes__Admin__Storage.py  Routes__Cache.py  Routes__Delete.py  Routes__Exists.py  Routes__Info.py  Routes__Namespace.py  Routes__Namespaces.py  Routes__Retrieve.py  Routes__Server.py  Routes__Storage.py  (+1 more)
mgraph_ai_service_cache/utils/: Version.py
mgraph_ai_service_cache__web_console/: index.html
scripts/: release-script-v1.0.0.sh  rename-service.sh  run-locally.sh  setup-from-template.sh  update-version.sh
tests/deploy_aws/: test_Deploy__Service__base.py  test_Deploy__Service__to__dev.py
tests/integration/: Service__Cache__Test_Objs__Integration.py
tests/unit/: Service__Cache__Test_Objs.py  Service__Fast_API__Test_Objs.py  test_config.py
(+259 files in other folders)
