[tool.poetry]
name        = "mgraph_ai_service_cache"
version     = "v0.5.59"
description = "MGraph-AI__Service__Cache"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "Apache 2.0"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/MGraph-AI__Service__Cache"
repository  = "https://github.com/the-cyber-boardroom/MGraph-AI__Service__Cache"

[tool.poetry.dependencies]
python                     = "^3.12"
osbot-fast-api-serverless  = "*"
memory_fs                  = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"